fix: add wrapper that aligns contents horizontally

--- a/style.css
+++ b/style.css
@@ -22,6 +22,12 @@ body {
   background-size: cover;
 }
 
+.cv-wrapper {
+  width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* HEADER */
 .header {
   background-color: rgba(0, 0, 0, 0.4);
@@ -33,6 +39,12 @@ body {
   padding: 20px;
   margin-bottom: 30px;
   background-color: rgba(255, 255, 255, 0.2);
+}
+
+.footer-items {
+  display: flex;
+  justify-content: center;
+  height: fit-content;
 }
 
 .footer li {
